Styling to prevent jumping on company and job pages when there are less resources to fill the entire page, default to showing everything at the top.

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .page-contents {
   padding-top: 60px;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
   min-height: 100%
